--- a/dapi/app/views/enqs/index.html.erb
+++ b/dapi/app/views/enqs/index.html.erb
@@ -24,11 +24,13 @@
     <td><%=h enq.movie %></td>
     <td><%=h enq.update_name %></td>
     <td><%=h enq.update_date %></td>
+    <td><%= link_to 'Get', enq, :method => :get %></td>	
     <td><%= link_to 'Show', enq %></td>
     <td><%= link_to 'Edit', edit_enq_path(enq) %></td>
     <td><%= link_to 'Destroy', enq, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
+
 </table>
 
 <br />
