--- a/dapi/app/views/branches/edit.html.erb
+++ b/dapi/app/views/branches/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing branche</h1>
+<h1>Editing branch</h1>
 
-<% form_for(@branche) do |f| %>
+<% form_for(@branch) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -32,5 +32,5 @@
   </p>
 <% end %>
 
-<%= link_to 'Show', @branche %> |
+<%= link_to 'Show', @branch %> |
 <%= link_to 'Back', branches_path %>
