--- a/dapi/app/views/branches/index.html.erb
+++ b/dapi/app/views/branches/index.html.erb
@@ -10,21 +10,21 @@
     <th>Update date</th>
   </tr>
 
-<% @branches.each do |branche| %>
+<% @branches.each do |branch| %>
   <tr>
-    <td><%=h branche.enq_id %></td>
-    <td><%=h branche.num %></td>
-    <td><%=h branche.answer %></td>
-    <td><%=h branche.page_id %></td>
-    <td><%=h branche.update_name %></td>
-    <td><%=h branche.update_date %></td>
-    <td><%= link_to 'Show', branche %></td>
-    <td><%= link_to 'Edit', edit_branche_path(branche) %></td>
-    <td><%= link_to 'Destroy', branche, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%=h branch.enq_id %></td>
+    <td><%=h branch.num %></td>
+    <td><%=h branch.answer %></td>
+    <td><%=h branch.page_id %></td>
+    <td><%=h branch.update_name %></td>
+    <td><%=h branch.update_date %></td>
+    <td><%= link_to 'Show', branch %></td>
+    <td><%= link_to 'Edit', edit_branch_path(branch) %></td>
+    <td><%= link_to 'Destroy', branch, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New branche', new_branche_path %>
+<%= link_to 'New branch', new_branch_path %>
