--- a/dapi/app/views/branches/show.html.erb
+++ b/dapi/app/views/branches/show.html.erb
@@ -1,33 +1,33 @@
 <p>
   <b>Enq:</b>
-  <%=h @branche.enq_id %>
+  <%=h @branch.enq_id %>
 </p>
 
 <p>
   <b>Num:</b>
-  <%=h @branche.num %>
+  <%=h @branch.num %>
 </p>
 
 <p>
   <b>Answer:</b>
-  <%=h @branche.answer %>
+  <%=h @branch.answer %>
 </p>
 
 <p>
   <b>Page:</b>
-  <%=h @branche.page_id %>
+  <%=h @branch.page_id %>
 </p>
 
 <p>
   <b>Update name:</b>
-  <%=h @branche.update_name %>
+  <%=h @branch.update_name %>
 </p>
 
 <p>
   <b>Update date:</b>
-  <%=h @branche.update_date %>
+  <%=h @branch.update_date %>
 </p>
 
 
-<%= link_to 'Edit', edit_branche_path(@branche) %> |
+<%= link_to 'Edit', edit_branch_path(@branch) %> |
 <%= link_to 'Back', branches_path %>
