--- a/dapi/app/views/branches/new.html.erb
+++ b/dapi/app/views/branches/new.html.erb
@@ -1,6 +1,6 @@
-<h1>New branche</h1>
+<h1>New branch</h1>
 
-<% form_for(@branche) do |f| %>
+<% form_for(@branch) do |f| %>
   <%= f.error_messages %>
 
   <p>
