--- a/dapi/app/views/enqs/show.html.erb
+++ b/dapi/app/views/enqs/show.html.erb
@@ -50,6 +50,7 @@
   <%= @enq.update_date %>
 </p>
 
+<%= link_to 'getEnq', @enq, action: :getEnq %>
 <%= link_to 'Destroy', @enq, confirm: 'Are you sure?', method: :delete %>
 <%= link_to 'Edit', edit_enq_path(@enq) %> |
 <%= link_to 'Back', enqs_path %>
