--- a/dapi/public/css/sp/style.css
+++ b/dapi/public/css/sp/style.css
@@ -14,21 +14,23 @@
 	
 		
 		.mr-ui-ad {
-			background-color:#000;
+			background-color:   #000;
 			/*border-radius: 8px;
 			-webkit-border-radius: 8px;*/
-			padding: 10px;
-			margin-bottom: 1em;
-			text-align: center;
+			padding:            10px;
+			margin-bottom:      1em;
+			text-align:         center;
 		}
 	
 			.mr-ui-ad .mr-ui-player {
-				margin-left:  auto;
-				margin-right: auto;	
+				width:            265px;
+				height:           154px;
+				margin-left:      auto;
+				margin-right:     auto;	
 			}
 			
 		.mr-ui-nav {
-			padding:                1em;
+			padding:                0.4em;
 			-webkit-box-shadow:     0 0 10px #f4b800 inset;
 			box-shadow:             0 0 10px #f4b800 inset;
 		}
@@ -47,7 +49,7 @@
 			border:                1px solid #f4b800;
 			border-radius:         8px;
 			-webkit-border-radius: 8px;
-			padding:               10px;
+			padding-bottom:        0.5em;
 		}
 		
 			/**
@@ -60,13 +62,13 @@
 			 * to avoid css redundancy! LETS BE SMART! 
 			 */
 			.mr-ui-content .mr-ui-content-block {
-				padding-left:        0.5em;
-				margin-right:        0.5em;
+				padding-left:        0.4em;
+				margin-right:        0.4em;
 			}
 			
 				.mr-ui-content-block .mr-ui-title {
-					margin-top:        0.5em;
-					text-align:        center;
+					margin-top:        0.4em;
+					margin-bottom:     0.4em;
 				}
 			
 					.mr-ui-content-block .mr-ui-title b {
@@ -75,7 +77,7 @@
 					}
 				
 				.mr-ui-content-block .mr-ui-description {
-					margin-top:        0.5em;
+					margin-top:        0.4em;
 				}
 				
 			/**
@@ -90,19 +92,30 @@
 			}
 				
 				.mr-ui-page .mr-ui-questions {
-					
-				}	
+					margin-bottom:      0.4em;
+				}
 					
 					.mr-ui-questions .mr-ui-title {
-						text-align: left;
+						text-align:      left;
 					}
 					
 					.mr-ui-questions .mr-ui-title b {
-						color:       #222;
-						font-size:   1em;
+						color:            #222;
+						font-size:        1em;
+						
 					}
 					
+						.mr-ui-questions .mr-ui-question {
+							margin-bottom:  1em;
+						}
+						
+							.mr-ui-question .mr-ui-answer {
+								line-height:  2em;
+							}
+							
+					
 				.mr-ui-page .mr-ui-next {
+					
 					/* float: right; */
 				}
 				
@@ -110,16 +123,24 @@
 				text-align: center;
 			}
 			
-				.mr-ui-complete .mr-ui-next {
-					width:         12em; 
+				.mr-ui-complete .mr-ui-button {
+					margin-top:    3em;
+					width:         80%; 
+				}
+				
+			.mr-ui-thankyou {
+				text-align: center;
+			}
+			
+				.mr-ui-thankyou .mr-ui-button {
+					margin-top:    3em;
+					width:         80%; 
 				}
 				
 			.mr-ui-already {
-				
 			}
 			
 				.mr-ui-already .mr-ui-title {
-					
 				}
 				
 				
@@ -166,18 +187,33 @@
 	cursor:           pointer;
 }
 
-
-.mr-ui-button a {
-	text-shadow: 1px 1px 0 #ddd;
-	display: block;
-	padding: 5px 0;
-	color: #444444;
-	text-decoration: none;
-}
-
 .mr-ui-button:disabled {
 	background:       none;
 	cursor:           none;
+}
+
+.mr-ui-button a {
+	color:            #222;
+	text-decoration:  none;
+}
+
+.mr-ui-result-hide .mr-ui-result {
+	display: none;
+}
+
+.mr-ui-result {
+	display:    inline-block;
+	width:      2em;
+	text-align: center;
+}
+
+.mr-ui-correct {
+	font-weight: bold;
+	color:       #0000FF;
+}
+
+.mr-ui-wrong {
+	color:       #FF0000;
 }
 
 .clear-type {
