--- a/dapi/public/css/sp/style.css
+++ b/dapi/public/css/sp/style.css
@@ -164,7 +164,7 @@
 					text-align:   center;
 				}
 				
-				.mr-ui-sorry .mr-ui-message {
+				.mr-ui-sorry .mr-ui-description {
 					text-align:   center;
 				}
 				
