--- a/dapi/public/css/sp/style.css
+++ b/dapi/public/css/sp/style.css
@@ -214,7 +214,9 @@
 	cursor:           none;
 }
 
-.mr-ui-button a {
+.mr-ui-button a,
+a .mr-ui-button
+{
 	color:            #222;
 	text-decoration:  none;
 }
