--- a/dapi/public/css/pc/themes/default-1/style.css
+++ b/dapi/public/css/pc/themes/default-1/style.css
@@ -1,6 +1,11 @@
 /**
- * 	Sample theme file for PC
+ * 	Sample theme file for Smart Phone
  */
-.mr-ui-canvas {
-	background-image:url(background.png);
+
+.mr-ui-header {
+	background-image:url(header.png);
+}
+
+.mr-ui-footer {
+	background-image:url(footer.png);
 }
