--- a/dapi/public/css/pc/themes/default-2/style.css
+++ b/dapi/public/css/pc/themes/default-2/style.css
@@ -1,3 +1,11 @@
-.mr-ui-canvas {
-	background-image:url(background.png);
+/**
+ * 	Sample theme file for Smart Phone
+ */
+
+.mr-ui-header {
+	background-image:url(header.png);
+}
+
+.mr-ui-footer {
+	background-image:url(footer.png);
 }
