--- a/dapi/public/css/sp/reset.css
+++ b/dapi/public/css/sp/reset.css
@@ -17,7 +17,8 @@ fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
+time, mark, audio, video,
+button {
     margin:0;
     padding:0;
     border:0;
@@ -98,5 +99,6 @@ hr {
 }
 
 input, select {
-    vertical-align:middle;
+   /* vertical-align:middle; */
+  vertical-align:baseline;
 }
